manifests/combined.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-collection-prod
  namespace: news-container
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"news-collection:latest","namespace":"news-container"},"fieldPath":"spec.template.spec.containers[?(@.name==\"news-collection\")].image","pause":"false"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      name: news-collection-prod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: news-collection-app
        name: news-collection-prod
    spec:
      volumes:
        - name: news-collection-data-prod
          persistentVolumeClaim:
            claimName: data-prod
      containers:
        - name: news-collection
          image: docker.io/ohtukontitus/news-collection:latest
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 2Gi
          volumeMounts:
            - name: news-collection-data-prod
              mountPath: /app/server/rss-fetcher/data
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  revisionHistoryLimit: 2
---
apiVersion: v1
kind: Service
metadata:
  name: news-collection-service-prod
  namespace: news-container
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: http
  selector:
    name: news-collection-prod
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: news-collection-route-prod
  namespace: news-container
spec:
  to:
    kind: Service
    name: news-collection-service-prod
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
